# SoftDeskSupport

./: AUDIT_SECURITE_ET_OPTIMISATION.md  Conception.md  Documentation API.md  Projets et etapes.md  README.md  db.sqlite3  documentation.md  exigences.md  pyproject.toml  recap.md
config/: settings.py  urls.py
docs/: API.md
softdesk/: admin.py  mixins.py  models.py  permissions.py  serializers.py  urls.py  views.py
softdesk/migrations/: 0001_initial.py  0002_initial.py  0003_alter_project_type.py  0003_remove_comment_custom_id_project_is_deleted_and_more.py  0004_comment_uuid.py  0005_remove_comment_uuid_comment_custom_id.py
users/: admin.py  models.py  permissions.py  serializers.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_age_user_birth_date.py
